--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,6 +3,9 @@
 @import './mixins.scss';
 @import "./functions.scss";
 @import "./header.scss";
+@import "./content.scss";
+@import "./work.scss";
+
 
 
 * {
