--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -3,18 +3,27 @@ header {
     flex-direction: column;
     min-height: 100vh;   
 
-    nav {}
-
     div {
         flex: 1;
         display: flex;
+        flex-direction: column;
         justify-content: center;
         align-items: center;
         height: 100%;
         h1 {
-            font-size: toRem(64);
-            width: 80%;
+            font-size: toRem(96);
             color: $primary-color-gpt;
+            font-family: $font-headding;
+            letter-spacing: toRem(10);
+
+            // text-shadow: 2px 2px #ff0000;
+            // text-shadow: 2px 2px #fff;
+
+        }
+
+        h2 {
+            font-size: toRem(24);
+            letter-spacing: toRem(3);
             font-family: $font-headding;
         }
     }
