--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -6,3 +6,7 @@ $primary-color-gpt: #ff0000;
 $secondary-color: #1d4ed8;
 $font-main: 'Hammersmith One', sans-serif;
 $font-headding:  'Ultra', serif;
+
+$bg: #0BAAD4;
+$text: rgba(255,255,255,.7);
+$hover: darken($bg, 10%);
