--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -1,6 +1,6 @@
 .container{
     display: flex;
-    border: toRem(1) solid red;
+   // border: toRem(1) solid red;
     min-height: 70vh;  
 }
 .leftside{
@@ -8,7 +8,7 @@
     justify-content: center;
     padding: 30px 0;
     width: 50%;
-    border: toRem(1) solid blue;
+   // border: toRem(1) solid blue;
     color: #fff;
 
     div {
