--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -1,67 +1,71 @@
-.content{
+.content {
+  display: flex;
+  flex-direction: column;
+  //justify-content: center;
+  align-items: center;
+  gap: toRem(30);
+  // border: 1px solid yellow;
+  min-height: 100vh;
+
+  .h1 {
     display: flex;
+    justify-content: center;
+    color: #fff;
+    font-size: toRem(70);
+    margin-top: toRem(150);
+  }
+
+  .container {
+    display: flex;
+    justify-content: center;
+    min-height: toRem(80);
+    width: 90%;
+    background: #000;
     flex-direction: column;
-    //justify-content: center;
-    align-items: center;
-    gap: toRem(30);
-   // border: 1px solid yellow;
-    min-height: 100vh;   
-    
 
-    .h1{
-        display: flex;
-        justify-content: center;
-        color: #fff;
-        font-size: toRem(70);
-        margin-top: toRem(150);
-       
+    @include mq("phone") {
+      background: #000;
+      flex-direction: row;
     }
 
-    .container{
+    //height: calc(100%/3);
+    // flex-direction: column;
+    border: 1px solid #fff;
+
+    .sides {
+      display: flex;
+      flex-wrap: wrap;
+      height: calc(100% / 3);
+      // justify-content: center;
+      color: #fff;
+      padding: toRem(20);
+      border: 1px solid #fff;
+      @include mq("phone") {
+        background: #000;
+        flex-direction: row;
+        width: calc(100% / 3);
+      }
+
+      .icons {
+        width: toRem(100);
+        height: toRem(100);
+      }
+      .side {
         display: flex;
-        justify-content: center;
-        min-height:toRem(80);
-        width:90%;
-        //height: calc(100%/3);
-        // flex-direction: column;
-        border: 1px solid #fff;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        // text-align: center;
 
-
-        .test{
-            display: flex;
-            flex-wrap: wrap;
-            height: calc(100%/3);
-           // justify-content: center;
-            color: #fff;
-            padding: toRem(20);
-            border: 1px solid #fff;
-            width:calc(100% / 3);
-
-            .icons{
-                width: toRem(100);
-                height: toRem(100);
-             }
-             .side{
-                 display: flex;
-                 flex-direction: row;
-                 justify-content: space-between;
-                 align-items: center;
-                // text-align: center;
-             
-             
-                 p {
-                     font-size: toRem(30);
-                     text-align: center;
-                 }
-                 div{
-                     display: flex;
-                     font-size: toRem(20);
-                 }
-             
-             }
-           
+        p {
+          font-size: toRem(30);
+          text-align: center;
         }
+        div {
+          display: flex;
+          font-size: toRem(20);
+        }
+      }
     }
+  }
 }
-
-
