--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -1,30 +1,65 @@
-.container{
-    display: flex;
-   // border: toRem(1) solid red;
-    min-height: 70vh;  
+.container {
+  display: flex;
+  flex-direction: column;
+  // border: toRem(1) solid red;
+  min-height: 70vh;
+
+  @include mq("phone") {
+    flex-direction: row;
+
+    // background: #000;
+  }
 }
-.leftside{
-    display: flex;
-    justify-content: center;
+
+.leftside {
+  display: flex;
+  justify-content: center;
+
+  color: #fff;
+  @include mq("phone") {
     padding: 30px 0;
-    width: 50%;
-   // border: toRem(1) solid blue;
-    color: #fff;
+  }
 
-    div {
-        display: flex;
-        flex-direction: column;
-        gap: 36px;
-        width: 75%;
-        }
-
-    h1{
-        display: flex;
-        font-size:toRem(80);
-
+  div {
+    display: flex;
+    flex-direction: column;
+    gap: 36px;
+    padding: 30px;
+    @include mq("tablet") {
+      background: #000;
+      width: 50%;
     }
-    p{
-        display: flex;
-        font-size:toRem(20);
-        }
+
+    h1 {
+      display: flex;
+      font-size: toRem(80);
+      background: #000;
+      @include mq("phone") {
+        background: #000;
+        width: 100%;
+      }
+    }
+    p {
+      display: flex;
+      font-size: toRem(20);
+      @include mq("phone") {
+        background: #000;
+        width: 100%;
+      }
+    }
+  }
+}
+
+.img {
+  border-radius: 20px;
+
+  display: none;
+  @include mq("desktop-wide") {
+    transform: rotate(-15deg);
+    opacity: 0.5;
+    display: block;
+    width: 100%;
+    height: 100%;
+    //border: 1px solid red;
+  }
 }
