--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -13,7 +13,8 @@
 
 .leftside {
   display: flex;
-  justify-content: center;
+  width: 50%;
+  //justify-content: center;
 
   color: #fff;
   @include mq("phone") {
@@ -25,9 +26,10 @@
     flex-direction: column;
     gap: 36px;
     padding: 30px;
+
     @include mq("tablet") {
       background: #000;
-      width: 50%;
+      width: 100%;
     }
 
     h1 {
@@ -50,16 +52,46 @@
   }
 }
 
-.img {
-  border-radius: 20px;
+.rightside {
+  width: 50%;
+  display: flex;
 
-  display: none;
-  @include mq("desktop-wide") {
-    transform: rotate(-15deg);
-    opacity: 0.5;
-    display: block;
+  .cont {
+    display: flex;
+    flex-direction: column;
     width: 100%;
-    height: 100%;
-    //border: 1px solid red;
+    background-color: #ddd;
   }
+
+  .skills {
+    text-align: right;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    color: white;
+  }
+
+  .html {
+    width: 90%;
+    background-color: #ff0000;
+  }
+  .css {
+    width: 85%;
+    background-color: #ff0000;
+  }
+  .js {
+    width: 70%;
+    background-color: #ff0000;
+  }
+  .react {
+    width: 75%;
+    background-color: #ff0000;
+  }
+}
+
+.test-w {
+  display: flex;
+  flex-direction: column;
+  gap: toRem(32);
+  width: 80%;
+  border-radius: 10px;
 }
