--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -4,9 +4,9 @@ $primary-color: #dc2626;
 $primary-color-gpt: #ff0000;
 
 $secondary-color: #1d4ed8;
-$font-main: 'Hammersmith One', sans-serif;
-$font-headding:  'Ultra', serif;
+$font-main: "Hammersmith One", sans-serif;
+$font-headding: "Ultra", serif;
 
-$bg: #0BAAD4;
-$text: rgba(255,255,255,.7);
+$bg: $primary-color;
+$text: rgba(255, 255, 255, 0.7);
 $hover: darken($bg, 10%);
