--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,126 +1,45 @@
-@import url('https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Ultra&display=swap');
-@import "./variables.scss";
-@import './mixins.scss';
-@import "./functions.scss";
+@import url("https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Ultra&display=swap");
+@import "abstracts/_abstracts";
+@import "components/nav";
 @import "./header.scss";
 @import "./content.scss";
 @import "./work.scss";
 
-
-
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-body { 
-    background-color: $black;
-    font-family: $font-main;
+body {
+  background-color: $black;
+  font-family: $font-main;
 }
 
-
-header {
-    color: white;
-}
-
-nav {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    min-height: toRem(60);
-    border-bottom: 1px solid red;
-
-    overflow: hidden;
-    position: fixed; /* Set the navbar to fixed position */
-    top: 0; /* Position the navbar at the top of the page */
-    width: 100%; /* Full width */
-}
-
-nav ul {
-    display: flex;
-    gap: 16px;
-    list-style-type: none;
-}
-
-// nav ul li:hover {
-//     opacity: .7;
-// }
-
-// nav ul li span {
-//     cursor: pointer;
-//     font-size: toRem(18);
-//     color: $text-color;
-// }
-
-.effect-5 {
-    display: inline-block;
-    overflow: hidden;
-    color: #fff;
-    cursor: pointer;
-
-    &:before, &:after {
-      right: 0;
-      bottom: 0;
-      background: $primary-color-gpt;
-    }
-    &:before {
-      width: 100%;
-      height: 2px;
-      transform:  translateX(-100%);
-    }
-    &:after {
-      width: 2px;
-      height: 100%;
-      transform:  translateY(100%);
-    }
-    > span {
-      display: block;
-      padding: 10px;
-      &:before, &:after {
-        left: 0;
-        top: 0;
-        background: $primary-color-gpt;
-      }
-      &:before {
-        width: 100%;
-        height: 2px;
-        transform:  translateX(100%);
-      }
-      &:after {
-        width: 2px;
-        height: 100%;
-        transform:  translateY(-100%);
-      }
-    }
-    &:hover:before, &:hover:after, &:hover > span:before, &:hover > span:after {
-      transform:  translate(0, 0);
-    }
+//TODO :TEST
+.test {
+  float: left;
+  color: #fff;
+  width: 50%;
+  height: 44px;
+  margin: 30px 0;
+  line-height: 24px;
+  text-align: center;
+  font-weight: normal;
+  @media screen and (max-width: 768px) {
+    width: 100%;
   }
-
-  .test {
-    float: left;
-    color: #fff;
-    width: 50%;
-    height: 44px;
-    margin: 30px 0;
-    line-height: 24px;
-    text-align: center;
-    font-weight: normal;
-    @media screen and (max-width: 768px) {
-      width: 100%;
-    }
+}
+a,
+a > span {
+  position: relative;
+  color: inherit;
+  text-decoration: none;
+  line-height: 24px;
+  &:before,
+  &:after {
+    content: "";
+    position: absolute;
+    transition: transform 0.5s ease;
   }
-  a, a > span {
-    position: relative;
-    color: inherit;
-    text-decoration: none;
-    line-height: 24px;
-    &:before, &:after {
-      content: '';
-      position: absolute;
-      transition: transform .5s ease;
-    }
-  }
+}
