--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,6 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Hammersmith+One&family=Ultra&display=swap");
 @import "abstracts/_abstracts";
-@import "components/nav";
+@import "components/_components";
 @import "./header.scss";
 @import "./content.scss";
 @import "./work.scss";
