--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -24,6 +24,7 @@ header {
       font-size: toRem(24);
       letter-spacing: toRem(3);
       font-family: $font-headding;
+      color: #f5f5f4;
     }
   }
 }
