add about section

--- a/src/styles/components/_nav.scss
+++ b/src/styles/components/_nav.scss
@@ -1,26 +1,30 @@
 nav {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: none;
 
-  min-height: toRem(60);
-  //   border-bottom: 1px solid red;
-
-  color: $text-color;
-
-  overflow: hidden;
-  position: fixed; /* Set the navbar to fixed position */
-  top: 0; /* Position the navbar at the top of the page */
-  width: 100%; /* Full width */
-
-  ul {
+  @include mq("tablet") {
     display: flex;
-    gap: toRem(32);
-    list-style-type: none;
+    justify-content: center;
+    align-items: center;
 
-    li {
-      cursor: pointer;
-      font-size: toRem(16);
+    min-height: toRem(60);
+    //   border-bottom: 1px solid red;
+
+    color: $text-color;
+
+    overflow: hidden;
+    position: fixed; /* Set the navbar to fixed position */
+    top: 0; /* Position the navbar at the top of the page */
+    width: 100%; /* Full width */
+
+    ul {
+      display: flex;
+      gap: toRem(32);
+      list-style-type: none;
+
+      li {
+        cursor: pointer;
+        font-size: toRem(16);
+      }
     }
   }
 }
