--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -1,17 +1,5 @@
 .about {
   min-height: 100vh;
-  color: #fff;
-
+  color: $text-color;
   padding: 20px 0;
-
-  .h1-custom {
-    font-size: toRem(48);
-    text-align: center;
-  }
-
-  p {
-    font-size: toRem(24);
-    text-align: center;
-    line-height: 1.5;
-  }
 }
