--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -19,6 +19,8 @@
 
       padding: 20px;
 
+      border-radius: 10px;
+
       .icons {
         width: toRem(100);
         height: toRem(100);
@@ -31,10 +33,17 @@
         align-items: center;
 
         p {
-          font-size: toRem(30);
-          text-align: center;
+          margin-left: 20px;
+          font-size: toRem(24);
         }
       }
     }
+  }
+}
+
+.subtitle {
+  p {
+    margin-top: 20px;
+    font-size: toRem(18);
   }
 }
