--- a/src/styles/components/_about.scss
+++ b/src/styles/components/_about.scss
@@ -1,5 +1,22 @@
 .about {
-  min-height: 100vh;
   color: $text-color;
   padding: 20px 0;
+
+  @include mq("tablet") {
+    min-height: 100%;
+    text-align: center;
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: toRem(60);
+  }
+
+  .block-text {
+    width: 100%;
+
+    @include mq("tablet") {
+      width: 70%;
+    }
+  }
 }
