--- a/src/styles/components/_contacts.scss
+++ b/src/styles/components/_contacts.scss
@@ -1,25 +1,17 @@
-.container {
+.contacts-container {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-  gap: toRem(30);
-  min-height: 100vh;
+  gap: toRem(20);
+  width: 100%;
 
-  h1 {
-    color: #f5f5f4;
-    display: flex;
-    font-size: toRem(70);
-    justify-content: first baseline;
-    padding: toRem(30);
-  }
+  padding: toRem(20);
+  .github-icon {
+    width: toRem(40);
+    height: toRem(40);
+    color: white;
 
-  .components {
-    color: #f5f5f4;
-    display: flex;
-    font-size: toRem(30);
-    width: 50%;
-    justify-content: space-around;
-    padding: toRem(30);
+    @include mq("tablet") {
+      width: toRem(70);
+      height: toRem(70);
+    }
   }
 }
