--- a/src/styles/content.scss
+++ b/src/styles/content.scss
@@ -1,25 +1,34 @@
 .content {
   display: flex;
   flex-direction: column;
-  gap: toRem(60);
-  min-height: 100vh;
+  gap: toRem(30);
 
   .skills-container {
     display: flex;
+    height: 100%;
     width: 100%;
+
     flex-direction: column;
-    align-items: center;
+    justify-content: space-around;
+
     gap: toRem(30);
+
+    @include mq("tablet") {
+      flex-direction: row;
+    }
 
     .sides {
       display: flex;
       flex-direction: column;
+
       color: #fff;
       border: 1px solid #fff;
-
-      padding: 20px;
-
       border-radius: 10px;
+      padding: 10px;
+
+      @include mq("tablet") {
+        width: calc(100% / 4);
+      }
 
       .icons {
         width: toRem(100);
@@ -29,7 +38,7 @@
       .side {
         display: flex;
         flex-direction: row;
-        justify-content: space-between;
+        // justify-content: space-between;
         align-items: center;
 
         p {
