--- a/src/styles/work.scss
+++ b/src/styles/work.scss
@@ -1,26 +1,30 @@
 .container-work {
-  display: flex;
-  flex-direction: column;
-  gap: toRem(45);
-  min-height: 100vh;
-}
-
-.leftside {
-  display: flex;
-  justify-content: center;
-  color: $text-color;
-  padding-top: toRem(60);
 }
 
 .rightside {
   display: flex;
   flex-direction: column;
-  gap: toRem(30);
+
   width: 100%;
+
+  @include mq("desktop") {
+    flex-direction: row;
+    gap: toRem(30);
+  }
+}
+
+.skill-wrapper {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: toRem(20);
+  padding: toRem(10) toRem(40);
+
+  @include mq("desktop") {
+  }
 }
 
 .cont {
-  flex: 1;
   width: 100%;
   background-color: #ddd;
 }
